--- a/index.html
+++ b/index.html
@@ -1889,12 +1889,12 @@
                                     <use xlink:href="img/sprite.svg#refresh"></use>
                                 </svg>
                             </a>
-                            <a href="../off.html" class="lockscreen-widgets__nav-btn">
+                            <a href="/off.html" class="lockscreen-widgets__nav-btn">
                                 <svg>
                                     <use xlink:href="img/sprite.svg#sleep-mode"></use>
                                 </svg>
                             </a>
-                            <a href="../off.html" class="lockscreen-widgets__nav-btn">
+                            <a href="/off.html" class="lockscreen-widgets__nav-btn">
                                 <svg>
                                     <use xlink:href="img/sprite.svg#turn-off"></use>
                                 </svg>
