muiuxos OS PC Preview - Build 1 - fix 3

--- a/index.html
+++ b/index.html
@@ -1884,17 +1884,17 @@
                                     <use xlink:href="img/sprite.svg#wifi"></use>
                                 </svg>
                             </div>
-                            <a href="/" class="lockscreen-widgets__nav-btn">
+                            <a href="/muiuxos" class="lockscreen-widgets__nav-btn">
                                 <svg>
                                     <use xlink:href="img/sprite.svg#refresh"></use>
                                 </svg>
                             </a>
-                            <a href="/off.html" class="lockscreen-widgets__nav-btn">
+                            <a href="/muiuxos/off.html" class="lockscreen-widgets__nav-btn">
                                 <svg>
                                     <use xlink:href="img/sprite.svg#sleep-mode"></use>
                                 </svg>
                             </a>
-                            <a href="/off.html" class="lockscreen-widgets__nav-btn">
+                            <a href="/muiuxos/off.html" class="lockscreen-widgets__nav-btn">
                                 <svg>
                                     <use xlink:href="img/sprite.svg#turn-off"></use>
                                 </svg>
