muiuxos OS PC Preview - Build 1 - fix 4

--- a/off.html
+++ b/off.html
@@ -25,7 +25,7 @@
 	
 	<div class="off">
     <div class="off__inner">
-        <a href="../index.html" class="off__btn">
+        <a href="/muiuxos" class="off__btn">
             <svg>
                 <use xlink:href="img/sprite.svg#turn-off"></use>
             </svg>
