muiuxos OS PC Preview - Build 1 - fix 5

--- a/index.html
+++ b/index.html
@@ -525,24 +525,24 @@
                     System Settings
                 </div>
             </div>
-            <div class="apps__item" data-title="GitHub">
+            <a href="https://github.com/maxuiux/muiuxos" class="apps__item" data-title="GitHub" target="_blank">
                 <img src="img/sprite.svg#app-github" alt="">
                 <div class="apps__item-title">
                     GitHub
                 </div>
-            </div>
+            </a>
             <a href="https://codepen.io/maxuiux" class="apps__item" data-title="CodePen" target="_blank">
                 <img src="img/sprite.svg#app-codepen" alt="">
                 <div class="apps__item-title">
                     CodePen
                 </div>
             </a>
-            <div class="apps__item" data-title="Behance">
+            <a href="https://www.behance.net/maxuiux" class="apps__item" data-title="Behance" target="_blank">
                 <img src="img/sprite.svg#app-behance" alt="">
                 <div class="apps__item-title">
                     Behance
                 </div>
-            </div>
+            </a>
             <a href="https://maxuiux.github.io/portfolio/" class="apps__item" data-title="Maxuiux" target="_blank">
                 <img src="img/sprite.svg#app-maxuiux" alt="">
                 <div class="apps__item-title">
