muiuxos OS PC Preview - Build 1 - fix 5

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <use xlink:href="img/sprite.svg#icon-theme"></use>
             </svg>
         </li>
-        <a href="/" class="context-menu__nav-item">
+        <a href="/muiuxos" class="context-menu__nav-item">
             <svg>
                 <use xlink:href="img/sprite.svg#refresh"></use>
             </svg>
