muiuxos OS PC Preview - Build 1 - fix 8

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="shortcut icon" href="img/favicons/favicon.webp" type="image/webp">
 	<link rel="shortcut icon" href="img/favicons/favicon.png" type="image/x-icon">
 	<link rel="stylesheet" href="css/libs.min.css">
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style.min.css?ver=0.0.1">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
