--- a/off.html
+++ b/off.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
-	<link rel="shortcut icon" href="img/favicons/favicon.svg" type="image/svg+xml">
-	<link rel="shortcut icon" href="img/favicons/favicon.webp" type="image/webp">
-	<link rel="shortcut icon" href="img/favicons/favicon.png" type="image/x-icon">
+	<link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+	<link rel="icon" href="img/favicons/favicon.webp" type="image/webp">
+	<link rel="icon" href="img/favicons/favicon.png" type="image/png">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.min.css?ver=0.0.1">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
